# SuMC

./: README.md
SuMC/: CMakeLists.txt  Cluster.cpp  ContainerClusters.cpp  cluster.cpp  containerClusters.cpp  lapackFunctions.cpp  main.cpp  subspaceClustering.h
demo/: data.txt  labels.txt
demo/res/: SuMC_description.txt  SuMC_labels.txt
